--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,61 @@
-.App {
+body {
+  background-color: #053A3D;
+}
+
+.container {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 200px;
+  height: 25px;
+  border-radius: 50%;
+  animation: anim 2s infinite alternate linear;
+  margin-top: 50px;
+}
+
+@keyframes anim {
+  0% {
+    background: #1C2C2C;
+  }
+  25% {
+    background: #AAC6C6;
+  }
+  50% {
+    background: #54E6E7;
+  }
+  75% {
+    background: #46B2B3;
+  }
+  100% {
+    background: #4F9899;
+  }
+}
+
+footer .container {
+  margin-top: 0;
+}
+
+footer {
+  position: fixed;
+  bottom: 0;
+  padding-top: 150px;
+  width: 100%;
+  height: 50px;
+  border-top: 2px solid #f5f5f5;
+  background-size: cover;
   text-align: center;
+  background-color: #333;
+  color: #fff;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+#nav {
+  margin-bottom: 0!important;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+#header {
+  background-image: url("C:\Users\janne\OneDrive\Kuvat\Taustakuvat\taustakuva4.png");
+  height: 260px;
+  width: 100%;
+  background-size: cover;
 }
